personal data added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
         <p id="current-city"></p>
       </nav>
       <main>
+        <section>
+          <img src="img/photocemil.jpeg" alt="profilephoto">
+          <p>1.Student Number:041121339</p>
+          <p>2.Mobile Application Design and Development</p>
+          <p>3.MAD9014-Assignment-1</p>
+          <p>4.I dont like breakfast.</p>
+
+        </section>
         <div class="weather-card">
           <p>Search for a city to see the current weather.</p>
         </div>
